# js-cairn-static

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  third_party_ai_autopentest_prompt.txt
examples/: sample_app.js
src/js_cairn_static/: __init__.py  analyzer.py  ast_visitor.py  bp_templates.py  cli.py  cluster.py  collector.py  constants.py  dataflow.py  deobfuscation.py  exposures.py  extractors.py  fingerprints.py  llm_input.py  login_state.py  models.py  normalizer.py  parser.py  risk.py  runtime_capture.py  sourcemaps.py  utils.py  vendor_rules.py
