[project]
name = "js-cairn-static"
version = "0.1.0"
description = "Python static analysis layer for JS API attack surface mining."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
  "playwright>=1.53",
  "beautifulsoup4>=4.12",
  "tree-sitter>=0.22",
  "tree-sitter-javascript>=0.21",
  "jsbeautifier>=1.15",
  "sourcemap>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
[project.scripts]
js-cairn-static = "js_cairn_static.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

